--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,3 +1,4 @@
+
 @media only screen and (max-device-width: 750px) {
     body {
         background-color:black;
@@ -80,6 +81,7 @@
         color: rgb(119, 101, 1);
         grid-row: 1;
         grid-column: 1;
+        cursor: pointer;
     }
     .home1 {
         grid-row: 2/4;
@@ -92,7 +94,7 @@
     .home1 h1 {
         grid-row: 3;
         grid-column: span 3;
-        color: snow;
+        color: rgb(119, 101, 1);
         text-align: center;
         margin-top: 40%;
         font-size: 5.5vh;
@@ -185,29 +187,63 @@
     .personal {
         grid-row: 2/4;
         display: grid;
-        grid-template-rows: repeat(1fr, 3);
+        grid-template-rows: repeat(1fr, 2);
         grid-template-columns: repeat(1fr, 3);
-        background-color: red;
+        background-color: black;
+        color: rgb(119, 101, 1);
+        border: solid;
+        border-color: rgb(119, 101, 1);
         height: 37.5vh;
-        width: 100vw;
+        width: 98vw;
         text-align: center;
         font-size: 2vh;
     }
 
-    .row1 {
+    .personal h1 {
+        grid-row: 1;
+        grid-column: span 3;
+    }
+    .col1 {
         grid-row: 2;
-        
+        grid-column: 1;
+    }
+    
+    .col2 {
+        grid-row: 2;
+        grid-column: 2;
     }
 
-    .row2 {
-        grid-row: 3;
+    .col3 {
+        grid-row: 2;
+        grid-column: 3;
     }
     .group {
         grid-row: 5/7;
-        background-color: green;
+        background-color: black;
+        color: rgb(119, 101, 1);
+        border: solid;
+        border-color: rgb(119, 101, 1);
         height: 37.5vh;
-        width: 100vw;
+        width: 98vw;
         text-align: center;
         font-size: 2vh;
+        display: grid;
+        grid-template-rows: repeat(1fr, 2);
+        grid-template-columns: repeat(1fr, 2)
+    }
+
+    .group h1 {
+        grid-row: 1;
+        grid-column: span 2;
+    }
+
+    .col4 {
+        grid-row: 2;
+        grid-column: 1;
+    }
+    
+    .col5 {
+        grid-row: 2;
+        grid-column: 2;
     }
 }
