--- a/site/book.html.erb
+++ b/site/book.html.erb
@@ -1,25 +1,27 @@
 <div class="book">
     <div class="personal">
         <h1>Personlig Tränare</h1>
-        <div class="row1">
+        <div class="col1">
             <h2>Noa</h2>
-            <h2>Jonas</h2>
-            <h2>Wilma</h2>
-        </div>
-        <div class="row2">
             <h2>Josuf</h2>
+        </div>
+        <div class="col2">
+            <h2>Jonas</h2>
             <h2>Julia</h2>
+        </div>
+        <div class="col3">
+            <h2>Wilma</h2>
             <h2>Ida</h2>
         </div>
     </div>
     <div class="group">
         <h1>Gruppträning</h1>
-        <div class="row3">
+        <div class="col4">
             <h2>Zumba</h2>
-            <h2>Body Pump</h2>
-        </div>
-        <div class="row4">
             <h2>Yoga</h2>
+        </div>
+        <div class="col5">
+            <h2>Body Pump</h2>
             <h2>Crossfit</h2>
         </div>
     </div>
