--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,7 +1,292 @@
+body {
+    background-color:black;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-@media only screen and (max-device-width: 750px) {
+.container {
+    display: grid;
+    grid-template-rows: repeat(1fr, 11);
+    grid-template-columns: repeat(1fr, 3);
+    width: 100vw;
+    height: 100vh;
+    background-color: grey;
+}
+header {
+    grid-row: 1;
+    grid-column: span 3;
+    width: 100vw;
+    height: 15vh;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(1fr, 3);
+    background-color:black;
+}
+header h1 {
+    color:  rgb(119, 101, 1);
+    grid-row: 1;
+    grid-column: 1/3;
+    text-align: center;
+    font-size: 6vh;
+}
+.mobile_menu {
+    display: none;
+    color: rgb(119, 101, 1);
+    grid-row: 1;
+    grid-column: 1;
+    position:absolute;
+    background-color: black;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgb(119, 101, 1);
+    width: 60vw;
+    height: 60vh;
+}
+ul {
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: repeat(1fr, 2);
+    grid-template-rows: repeat(1fr, 4);
+    grid-row-gap: 5vh;
+
+}
+a {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+}
+
+a:visited {
+   color: rgb(119, 101, 1);
+}
+li {
+    font-size: 6vw;
+    grid-row: span 1;
+    grid-column: span 2;
+    border-style: solid;
+}
+.show {
+    display: block;
+    transition: ease-out 0.6s;
+}
+.fade {
+    display: none;
+}
+.material-icons  {
+    font-size: 9vh;
+    color: rgb(119, 101, 1);
+    grid-row: 1;
+    grid-column: 1;
+    cursor: pointer;
+}
+.home1 {
+    grid-row: 2/4;
+    grid-column: span 3;
+    width: 100vw;
+    height: 40vh;
+    background-image: url("../img/bg-home.jpeg");
+    background-size: 100% 100%;
+}
+.home1 h1 {
+    grid-row: 3;
+    grid-column: span 3;
+    color: rgb(119, 101, 1);
+    text-align: center;
+    margin-top: 40%;
+    font-size: 5.5vh;
+}
+.home2 {
+    grid-row: 6/8;
+    grid-column: span 3;
+    width: 100vw;
+    height: 35vh;
+    background-image: url("../img/motivation.jpg");
+    background-size: 100% 100%;
+}
+.home2 p {
+    text-align: center;
+    margin-top: 45%;
+    font-size: 3vh;
+}
+footer {
+    width: 100vw;
+    height: 10vh;
+    display: grid;
+    grid-template-columns: repeat(1fr, 3);
+    grid-template-rows: repeat(1fr, 3);
+    grid-row: 9/11;
+    grid-column: span 3;
+    background-color: black;
+}
+
+footer p {
+    color: rgb(119, 101, 1);
+    text-align: center;
+    font-size: 2.5vh;
+}
+
+.column1 {
+    grid-column: span 1;
+    grid-row: span 3;
+    
+}
+
+.column2 {
+    grid-column: 2;
+    grid-row: span 3;
+}
+
+.column3 {
+    grid-column: 3;
+    grid-row: span 3;
+}
+
+.silver {
+    grid-row: 2/3;
+    background-color: silver;
+    width: 100vw;
+    height: 25vh;
+    text-align: center;
+    font-size: 2vh;
+}
+
+.gold {
+    grid-row: 4/5;
+    background-color: rgb(192, 166, 19);
+    width: 100vw;
+    height: 25vh;
+    text-align: center;
+    font-size: 2vh;
+}
+
+.diamond {
+    grid-row: 6/7;
+    background-color: rgb(97, 142, 194);
+    width: 100vw;
+    height: 25vh;
+    text-align: center;
+    font-size: 2vh;
+}
+
+button {
+    cursor: pointer;
+    border-radius: 20px;
+    background-color: black;
+    border: 2px solid;
+    border-color: rgb(119, 101, 1);
+    height: 7vh;
+    width: 20vw;
+    font-size: 6vw;
+    color: rgb(119, 101, 1);
+}
+
+.personal {
+    grid-row: 2/4;
+    display: grid;
+    grid-template-rows: repeat(1fr, 2);
+    grid-template-columns: repeat(1fr, 3);
+    background-color: black;
+    color: rgb(119, 101, 1);
+    border: solid;
+    border-color: rgb(119, 101, 1);
+    height: 37.5vh;
+    width: 98vw;
+    text-align: center;
+    font-size: 2vh;
+}
+
+.personal h1 {
+    grid-row: 1;
+    grid-column: span 3;
+}
+.col1 {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.col2 {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.col3 {
+    grid-row: 2;
+    grid-column: 3;
+}
+.group {
+    grid-row: 5/7;
+    background-color: black;
+    color: rgb(119, 101, 1);
+    border: solid;
+    border-color: rgb(119, 101, 1);
+    height: 37.5vh;
+    width: 98vw;
+    text-align: center;
+    font-size: 2vh;
+    display: grid;
+    grid-template-rows: repeat(1fr, 2);
+    grid-template-columns: repeat(1fr, 2)
+}
+
+.group h1 {
+    grid-row: 1;
+    grid-column: span 2;
+}
+
+.col4 {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.col5 {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.account {
+    text-align: center;
+    display: grid;
+    grid-template-rows: repeat(1fr, 6);
+    grid-template-columns: repeat(1fr, 4);
+    height: 75vh;
+    width: 98vw;
+    background-color: black;
+    color: rgb(119, 101, 1);
+}
+
+.login {
+    grid-row: span 2;
+    border: solid;
+    border-color: rgb(119, 101, 1);
+}
+
+.login button {
+    grid-row: 3;
+    grid-column: 2 / 3;
+    font-size: 2.5vh;
+    align-content: center;
+}
+
+.register {
+    grid-row: 4;
+    border: solid;
+    border-color: rgb(119, 101, 1);
+}
+
+.register button {
+    font-size: 2.5vh;
+    grid-row: 6;
+    align-content: center;
+}
+
+.desk_menu {
+    visibility: hidden;
+}
+@media only screen and (min-device-width: 500px) {
     body {
-        background-color:black;
+        background-color: black;
         margin: 0;
         padding: 0;
         font-family: Arial, Helvetica, sans-serif;
@@ -9,241 +294,124 @@
     
     .container {
         display: grid;
-        grid-template-rows: repeat(1fr, 11);
-        grid-template-columns: repeat(1fr, 3);
+        grid-template-rows: repeat(1fr, 14);
+        grid-template-columns: repeat(1fr, 5);
         width: 100vw;
         height: 100vh;
         background-color: grey;
     }
+    
     header {
-        grid-row: 1;
-        grid-column: span 3;
+        grid-row: span 2;
+        grid-column: span 5;
         width: 100vw;
         height: 15vh;
         display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: repeat(1fr, 3);
-        background-color:black;
-    }
-    header h1 {
-        color:  rgb(119, 101, 1);
-        grid-row: 1;
-        grid-column: 1/3;
-        text-align: center;
-        font-size: 6vh;
-    }
-    .menu {
-        display: none;
-        color: rgb(119, 101, 1);
-        grid-row: 1;
-        grid-column: 1;
-        position:absolute;
+        grid-template-rows: repeat(1fr);
+        grid-template-columns: repeat(1fr, 5);
         background-color: black;
-        border-width: 2px;
-        border-style: solid;
-        border-color: rgb(119, 101, 1);
-        width: 60vw;
-        height: 55vh;
+        color: rgb(119, 101, 1);
+        
     }
-    ul {
-        list-style-type: none;
-        display: grid;
-        grid-template-columns: repeat(1fr, 2);
-        grid-template-rows: repeat(1fr, 4);
-        grid-row-gap: 5vh;
-
+    
+    header h1 {
+        grid-column: 1;
+        grid-row: 1;
     }
+    
     a {
         text-decoration: none;
     }
     a:hover {
         text-decoration: none;
     }
-
+    
     a:visited {
        color: rgb(119, 101, 1);
     }
+    .desk_menu {
+        grid-column: 2/5;
+        grid-row: 1;
+        height: 15vh;
+        width: 100vw;
+        text-align: center;
+        
+    }
+    
+    .desk_menu h2 {
+        float: left;
+        margin: 5vw;
+        margin-top: 1vh;
+    }
+    .mobile_menu {
+        visibility: hidden;
+    }
+    
+    ul {
+        visibility: hidden;
+    }
+    
     li {
-        font-size: 6vw;
-        grid-row: span 1;
-        grid-column: span 2;
-        border-style: solid;
+        visibility: hidden;
+    }
+    
+    .material-icons {
+        visibility: hidden;
     }
     .show {
-        display: block;
-        transition: ease-out 0.6s;
+        visibility: hidden;
     }
+    
     .fade {
-        display: none;
+        visibility: hidden;
     }
-    .material-icons  {
-        font-size: 9vh;
-        color: rgb(119, 101, 1);
-        grid-row: 1;
-        grid-column: 1;
-        cursor: pointer;
-    }
+    
     .home1 {
-        grid-row: 2/4;
-        grid-column: span 3;
+        grid-row: 3 / 5;
         width: 100vw;
         height: 40vh;
+        text-align: center;
         background-image: url("../img/bg-home.jpeg");
         background-size: 100% 100%;
-    }
-    .home1 h1 {
-        grid-row: 3;
-        grid-column: span 3;
         color: rgb(119, 101, 1);
-        text-align: center;
-        margin-top: 40%;
-        font-size: 5.5vh;
+    }
+    
+    .home1 h1 {
+        grid-row: 2;
     }
     .home2 {
-        grid-row: 6/8;
-        grid-column: span 3;
-        width: 100vw;
-        height: 35vh;
-        background-image: url("../img/motivation.jpg");
-        background-size: 100% 100%;
+    
     }
-    .home2 p {
-        text-align: center;
-        margin-top: 45%;
-        font-size: 3vh;
-    }
+    
     footer {
         width: 100vw;
         height: 10vh;
         display: grid;
-        grid-template-columns: repeat(1fr, 3);
+        grid-template-columns: repeat(1fr, 6);
         grid-template-rows: repeat(1fr, 3);
-        grid-row: 9/11;
-        grid-column: span 3;
+        grid-row: 12 / 14;
+        grid-column: span 5;
         background-color: black;
     }
-
     footer p {
         color: rgb(119, 101, 1);
         text-align: center;
         font-size: 2.5vh;
     }
-
+    
     .column1 {
         grid-column: span 1;
         grid-row: span 3;
         
     }
-
+    
     .column2 {
         grid-column: 2;
         grid-row: span 3;
     }
-
+    
     .column3 {
         grid-column: 3;
         grid-row: span 3;
-    }
-
-    .silver {
-        grid-row: 2/3;
-        background-color: silver;
-        width: 100vw;
-        height: 25vh;
-        text-align: center;
-        font-size: 2vh;
-    }
-
-    .gold {
-        grid-row: 4/5;
-        background-color: rgb(192, 166, 19);
-        width: 100vw;
-        height: 25vh;
-        text-align: center;
-        font-size: 2vh;
-    }
-
-    .diamond {
-        grid-row: 6/7;
-        background-color: rgb(97, 142, 194);
-        width: 100vw;
-        height: 25vh;
-        text-align: center;
-        font-size: 2vh;
-    }
-
-    button {
-        cursor: pointer;
-        border-radius: 20px;
-        background-color: black;
-        border: 2px solid;
-        border-color: rgb(119, 101, 1);
-        height: 7vh;
-        width: 20vw;
-        font-size: 6vw;
-        color: rgb(119, 101, 1);
-    }
-
-    .personal {
-        grid-row: 2/4;
-        display: grid;
-        grid-template-rows: repeat(1fr, 2);
-        grid-template-columns: repeat(1fr, 3);
-        background-color: black;
-        color: rgb(119, 101, 1);
-        border: solid;
-        border-color: rgb(119, 101, 1);
-        height: 37.5vh;
-        width: 98vw;
-        text-align: center;
-        font-size: 2vh;
-    }
-
-    .personal h1 {
-        grid-row: 1;
-        grid-column: span 3;
-    }
-    .col1 {
-        grid-row: 2;
-        grid-column: 1;
-    }
-    
-    .col2 {
-        grid-row: 2;
-        grid-column: 2;
-    }
-
-    .col3 {
-        grid-row: 2;
-        grid-column: 3;
-    }
-    .group {
-        grid-row: 5/7;
-        background-color: black;
-        color: rgb(119, 101, 1);
-        border: solid;
-        border-color: rgb(119, 101, 1);
-        height: 37.5vh;
-        width: 98vw;
-        text-align: center;
-        font-size: 2vh;
-        display: grid;
-        grid-template-rows: repeat(1fr, 2);
-        grid-template-columns: repeat(1fr, 2)
-    }
-
-    .group h1 {
-        grid-row: 1;
-        grid-column: span 2;
-    }
-
-    .col4 {
-        grid-row: 2;
-        grid-column: 1;
-    }
-    
-    .col5 {
-        grid-row: 2;
-        grid-column: 2;
     }
 }
