--- a/site/home.html.erb
+++ b/site/home.html.erb
@@ -4,3 +4,7 @@
 <div class="home2">
     <p>För elitidrottaren på resande fot till dig som bara vill ha professionell träning</p>
 </div>
+<div class="desk_home">
+    <div class="slogan"><h1>Av proffs - För proffs</h1></div>
+    <div class="info"><p>För elitidrottaren på resande fot till dig som bara vill ha professionell träning</p></div>
+</div>
