--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -31,7 +31,7 @@ header h1 {
     font-size: 6vh;
 }
 .mobile_menu {
-    display: none;
+    opacity: 0;
     color: rgb(119, 101, 1);
     grid-row: 1;
     grid-column: 1;
@@ -42,6 +42,7 @@ header h1 {
     border-color: rgb(119, 101, 1);
     width: 60vw;
     height: 60vh;
+    transition: ease-in 0.3s;
 }
 ul {
     list-style-type: none;
@@ -49,6 +50,8 @@ ul {
     grid-template-columns: repeat(1fr, 2);
     grid-template-rows: repeat(1fr, 4);
     grid-row-gap: 5vh;
+    text-align: center;
+    margin-left: -10vw;
 
 }
 a {
@@ -68,8 +71,7 @@ li {
     border-style: solid;
 }
 .show {
-    display: block;
-    transition: ease-out 0.6s;
+    opacity: 1;
 }
 .fade {
     display: none;
@@ -80,6 +82,10 @@ li {
     grid-row: 1;
     grid-column: 1;
     cursor: pointer;
+}
+
+.desk_home {
+    display: none;
 }
 .home1 {
     grid-row: 2/4;
@@ -282,9 +288,9 @@ button {
 }
 
 .desk_menu {
-    visibility: hidden;
+    display: none;
 }
-@media only screen and (min-device-width: 500px) {
+@media (min-width: 500px) {
     body {
         background-color: black;
         margin: 0;
@@ -308,7 +314,7 @@ button {
         height: 15vh;
         display: grid;
         grid-template-rows: repeat(1fr);
-        grid-template-columns: repeat(1fr, 5);
+        grid-template-columns: 30px repeat(1fr, 5);
         background-color: black;
         color: rgb(119, 101, 1);
         
@@ -317,7 +323,9 @@ button {
     header h1 {
         grid-column: 1;
         grid-row: 1;
+        text-align: center;
     }
+
     
     a {
         text-decoration: none;
@@ -333,54 +341,99 @@ button {
         grid-column: 2/5;
         grid-row: 1;
         height: 15vh;
-        width: 100vw;
+        width: 80vw;
         text-align: center;
-        
+        display: block;
+        display: inline-block;
     }
     
-    .desk_menu h2 {
-        float: left;
-        margin: 5vw;
-        margin-top: 1vh;
+    .home {
+        grid-column: 2;
+    }
+
+    .member {
+        grid-column: 3;
+    }
+
+    .personal_m {
+        grid-column: 4;
+    }
+
+    .login_m {
+        grid-column: 5;
     }
     .mobile_menu {
-        visibility: hidden;
+        display: none;
+
     }
     
     ul {
-        visibility: hidden;
-    }
+        display: none;
+   }
     
     li {
-        visibility: hidden;
+        display: none;
     }
     
     .material-icons {
-        visibility: hidden;
+        display: none;
     }
     .show {
-        visibility: hidden;
+        display: none;
     }
     
     .fade {
-        visibility: hidden;
+        display: none;
     }
     
-    .home1 {
-        grid-row: 3 / 5;
-        width: 100vw;
-        height: 40vh;
-        text-align: center;
-        background-image: url("../img/bg-home.jpeg");
+    .desk_home {
+        background-image: url("../img/bg-home-desk.jpg");
         background-size: 100% 100%;
+        grid-row: 3 / 11;
+        grid-column: 1 / 6;
+        height: 75vh;
+        width: 100vw;
+        display: block;
+        text-align: center;
         color: rgb(119, 101, 1);
+        grid-template-rows: repeat(1fr, 8);
+        grid-template-columns: repeat(1fr, 5);
+        display: grid;
     }
-    
+
+    .slogan {
+        grid-row: 3;
+        grid-column: span 5;
+        font-size: 4vh;
+        
+    }
+
+    .info{
+        grid-row: 6;
+        grid-column: span 5;
+        font-size: 4vh;
+        text-shadow: 1px 1px;
+        text-shadow: 
+        -0.5px -0.5px 0px snow,
+         0px -0.5px 0px snow,
+         0.5px -0.5px 0px snow,
+        -0.5px  0px 0px snow,
+         0.5px  0px 0px snow,
+        -0.5px  0.5px 0px snow,
+         0px  0.5px 0px snow,
+         0.5px  0.5px 0px snow;
+    }
+    .home1 {
+        display: none;
+    }
     .home1 h1 {
-        grid-row: 2;
+        display: none;
     }
     .home2 {
-    
+        display: none;
+    }
+    .home2 p {
+        display: none;
     }
     
     footer {
