--- a/site/book.html.erb
+++ b/site/book.html.erb
@@ -1,4 +1,4 @@
-<div class="book">
+<div class="book_mobile">
     <div class="personal">
         <h1>Personlig Tränare</h1>
         <div class="col1">
@@ -21,6 +21,33 @@
             <h2>Yoga</h2>
         </div>
         <div class="col5">
+            <h2>Body Pump</h2>
+            <h2>Crossfit</h2>
+        </div>
+    </div>
+</div>
+
+<div class="book_desk">
+    <div class="personal">
+        <h1>Personlig Träning</h1>
+        <div class="col1">
+            <h2>Noa</h2>
+            <h2>Wilma</h2>
+            <h2>Julia</h2>
+        </div>
+        <div class="col2">
+            <h2>Jonas</h2>
+            <h2>Josuf</h2>
+            <h2>Ida</h2>
+        </div>
+    </div>
+    <div class="group">
+        <h1>Gruppträning</h1>
+        <div class="col3">
+            <h2>Zumba</h2>
+            <h2>Yoga</h2>
+        </div>
+        <div class="col4">
             <h2>Body Pump</h2>
             <h2>Crossfit</h2>
         </div>
