--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -11,11 +11,13 @@
             <header>
             <h1>1337-Gym</h1>
                 <div class="desk_menu">
-                <h2 class="home"><a href="home.html">Hem</a></h2>
-                <h2 class="member"><a href="buy.html">Bli Medlem</a></h2>
-                <h2 class="personal_t"><a href="book.html">Personlig Träning</a></h2>
-                <h2 class="group_t"><a href="book.html">Gruppträning</a></h2>
-                <h2 class="login_m"><a href="login.html">Logga In</a></h2>
+                    <ul>
+                        <li><a href="home.html">Hem</a></li>
+                        <li><a href="buy.html">Bli Medlem</a></li>
+                        <li><a href="book.html">Personlig Träning</a></li>
+                        <li><a href="book.html">Gruppträning</a></li>
+                        <li><a href="login.html">Logga In</a></li>
+                    </ul>
                 </div>
                 <div class="mobile_menu">
                         <i class="material-icons" onclick="toggleMenu()">close</i>
