--- a/site/login.html.erb
+++ b/site/login.html.erb
@@ -1,4 +1,4 @@
-<div class="account">
+<div class="account_mobile">
     <div class="login">
         <h1>Logga In</h1>
         <input type="text" placeholder="Användarnamn">
@@ -9,6 +9,21 @@
         <h1>Skapa konto</h1>
         <input type="text" placeholder="Användarnamn">
         <input type="password" placeholder="Lösenord">
+        <button>Skapa</button>
+    </div>
+</div>
+
+<div class="account_desk">
+    <div class="login">
+        <h1>Logga In</h1>
+        <input class="input1" type="text" placeholder="Användarnamn">
+        <input class="input2" type="password" placeholder="Lösenord">
+        <button>Logga In</button>
+    </div>
+    <div class="register">
+        <h1>Skapa konto</h1>
+        <input class="input3" type="text" placeholder="Användarnamn">
+        <input class="input4" type="password" placeholder="Lösenord">
         <button>Skapa</button>
     </div>
 </div>
